css/style.css
/* ... */
.field-input,
.field-textarea {
	padding-top: 10px;
	padding-right: 15px;
	padding-bottom: 10px;
	padding-left: 15px;

	font-size: 14px;
	line-height: 24px;
	font-weight: 700;
	color: rgb(50, 50, 50);

	background-color: rgb(255, 255, 255);

	border: none;
	border-radius: 5px;
	box-shadow: inset 0 0 0 1px rgb(178, 178, 178);
}

.field-input:hover,
.field-textarea:hover {
	border: none;
	box-shadow: inset 0 0 0 2px rgb(198, 197, 196);
	outline: none;
}

.field-input:active,
.field-textarea:active,
.field-input:focus,
.field-textarea:focus {
	border: none;
	box-shadow: inset 0 0 0 2px rgb(143, 189, 236);
	outline: none;
}

.field-input::placeholder,
.field-textarea::placeholder {
	font-weight: 400;
	color: rgb(153, 153, 153);
}

.field-input:-ms-input-placeholder {
	font-weight: 400;
	color: rgb(153, 153, 153);
}

.field-textarea:-ms-input-placeholder {
	font-weight: 400;
	color: rgb(153, 153, 153);
}

.field-input:focus::-webkit-input-placeholder {
	color: transparent;
}

.field-input:focus::-moz-placeholder {
	color: transparent;
}

.field-input:focus:-ms-input-placeholder {
	color: transparent;
}

.field-textarea {
	resize: none;
}

.field-input:focus + .field-label,
.field-textarea:focus + .field-label {
	display: block;
}
/*END of General Form styling*/
/*END of Styles for Overall Site*/

/*Main Header*/
.main-header {
	display: flex;
	justify-content: space-between;
}

.main-logo {
	width: 154px;
	height: 64px;
	margin-right: 10px;
}

.main-navigation {
	display: flex;
	margin-top: 10px;
}

.main-navigation-list {
	display: flex;
	margin-top: 13px;
	padding: 0;

	list-style: none;
}

.main-navigation-item {
	position: relative;

	margin: 0;
	padding: 0;
}

.main-navigation-link {
	display: block;
	padding-top: 7px;
	padding-right: 14px;
	padding-bottom: 7px;
	padding-left: 14px;

	font-size: 16px;
	line-height: 18px;
	font-weight: 700;
	color: rgb(255, 255, 255);

	border-radius: 15px;
}

.main-navigation-link-current {
	background-color: rgb(208, 112, 88);
}

.main-navigation-link:hover,
.main-navigation-link:focus {
	color: rgb(50, 50, 50);

	background-color: rgb(247, 246, 243);

	outline: none;
}

.main-navigation-link:hover .border-bottom,
.main-navigation-link:focus .border-bottom {
	border: none;
}

.main-navigation-link:active {
	background-color: rgb(237, 237, 237);

	box-shadow: inset 0 2px 1px 0 rgb(105, 105, 105);
}

.dropdown-menu-list {
	position: absolute;
	top: 37px;
	left: -8px;

	margin: 0;
	padding: 0;

	background-color: rgb(247, 246, 243);

	border-radius: 5px;
	box-shadow: 0 20px 20px 0 rgba(0, 0, 0, 0.4);
	list-style: none;

	display: none;
}

.dropdown-menu-item {
	font-size: 14px;
	line-height: 16px;
	font-weight: 400;
	color: rgb(50, 50, 50);
}

.dropdown-menu-item:first-child {
	padding-top: 11px;
	padding-right: 15px;
	padding-bottom: 7px;
	padding-left: 20px;
}

.dropdown-menu-item:first-child::after {
	content: '';

	position: absolute;
	top: 37px;
	left: 7px;

	width: 128px;
	height: 1px;

	background-color: rgba(0, 0, 0, .2);
}

.dropdown-menu-item:nth-child(2) {
	padding-top: 6px;
}

.dropdown-menu-item:last-child {
	padding-bottom: 8px;
}

.dropdown-link {
	display: inline-block;
	vertical-align: middle;
	margin: 0;
	padding-top: 9px;
	padding-bottom: 6px;
	padding-right: 14px;
	padding-left: 21px;
	min-width: 110px;

	color: rgb(50, 50, 50);
}


.dropdown-link:hover,
.dropdown-link:focus {
	background-color: rgb(251, 222, 215);
}

.dropdown-link:active {
	background-color: rgb(246, 181, 165);
}

.dropdown-link-current {
	background-color: rgb(208, 112, 88);
}

.main-navigation-item:hover .dropdown-menu-list,
.main-navigation-item:focus .dropdown-menu-list {
	display: block;
}

.user-navigation {
	position: relative;

	display: flex;
	margin-top: 23px;
	padding: 0;

	list-style: none;
}

.user-navigation-item {
	margin-left: 10px;
	padding: 0;
}

.user-navigation-link {
	display: flex;
	align-items: center;
	padding-top: 6px;
	padding-bottom: 6px;
	padding-right: 16px;
	padding-left: 16px;

	font-size: 14px;
	line-height: 16px;
	font-weight: 500;
	color: rgb(255, 255, 255);

	background-color: rgba(255, 255, 255, .2);
	
	border-radius: 15px;

	overflow: hidden;
}

.user-navigation-link:hover,
.user-navigation-link:focus,
.user-navigation-link:active {
	color: rgb(50, 50, 50);

	background-color: rgb(247, 246, 243);
	outline: none;
}

.user-navigation-icon {
	margin-right: 7px;
}

.btn-search {
	display: block;
	width: 25px;
	height: 25px;
	padding-top: 7px;
	padding-right: 0;
	padding-left: 7px;
	padding-bottom: 0;
}

.cart-empty-link {
	min-width: 85px;
}

.cart-full-link {
	color: rgb(50, 50, 50);

	background-color: rgb(247, 246, 243);

	outline: none;
}

.user-navigation-item:hover .cart {
	display: block;
}
/*END of General Header*/

/*Breadcrumbs*/
.breadcrumbs {
	padding-top: 22px;
}

.breadcrumbs-list {
	display: flex;
	margin: 0;
	padding: 0;

	list-style: none;
}

.breadcrumbs-item {
	margin-right: 7px;
	padding: 0;

	font-size: 14px;
	line-height: 16px;
	color: rgb(255, 255, 255);
}

.breadcrumbs-link {
	color: rgb(255, 255, 255);

	border-bottom: 1px solid rgba(255, 255, 255, .2);
}

.breadcrumbs-link:hover,
.breadcrumbs-link:focus,
.breadcrumbs-link:active {
	color: rgb(255, 188, 158);

	border-color: rgba(255, 188, 158, .3);
	outline: none;
}
/*END of Breadcrumbs*/

/*Work Time and Schedule*/
.schedule {
	font-size: 14px;
	line-height: 16px;
	font-weight: 700;
	text-align: right;
}

.work-time {
	font-size: 14px;
	line-height: 16px;
	font-weight: 700;
	text-align: right;
}

.work-phone {
	display: block;
	padding-top: 4px;

	font-size: 22px;
	line-height: 24px;
	font-weight: 700;
	color: rgb(255, 255, 255);
}

.work-phone:hover,
.work-phone:focus,
.work-phone:active {
	color: rgb(255, 188, 158);

	outline: none;
}
/*END of Work Time and Schedule*/

/*Slider in index.html*/
.slider-list {
	margin: 0;
	padding: 0;

	list-style: none;
}

.slider-item p {
	margin: 0;
	padding: 0;

	font-size: 60px;
	line-height: 60px;
	font-weight: 700;
}
/* ... */

